src/index.css
/* ... */
h1, h2 {
  color: white;
  margin: 0;
}

.App-header {
  background-color: #607aa2;
  padding: 0% 5%;
  z-index: 10;
  position: sticky;
  top: 0;
  height: 4.2rem;
}

.logo {
  width: 50%;
}

.nav-menu {
  width: 50%;
  text-align: right;
  padding-right: 3%;
}

.menu-items {
  display: inline;
  line-height: 2.8rem;
  padding: 0 10px 0 0;
}

#hamburger {
  display: none;
  padding: 16px 0 0;
}

.mobile-only {
  display: none;
}

.mobile-alert {
  display: none;
}

@media screen and (max-width: 800px) {
  .desktop-only {
    display: none;
  }
  .mobile-only {
    display: block;
  }
  .mobile-alert {
    display: block;
    background-color: #fcc;
    color: #800000;
    font-size: 14px;
    padding: 2px 0 2px 10px;
    border-radius: 4px;
    border: 1px solid #800000;
  }
  .menu-items a {
    display: none;
  }
  #hamburger {
    display: block;
  }
  .logo {
    width: 80%;
  }
  /* .responsive added on mobile menu click */
  .nav-menu.responsive {
    width: 100%;
    text-align: left;
    background-color: #607aa2;
  }
  .menu-items.responsive {
    display: block;
    line-height: 0;
    padding: 0;
  }
  .menu-items.responsive a {
    display: block;
    line-height: 0;
    padding: 0;
  }
}

.hamburger {
  fill: #fcfcfc;
}

.container {
  width: 70%;
  margin-left: 5%;
}

.content-section {
  font-size: 16px;
  text-align: left;
  padding: 0 0 1rem;
}

.card-content {
  background-color: #fcfcfc;
  width: 90%;
  border: 5px solid white;
  padding: 1rem;
  margin: 0 auto 3rem 3rem;
}
.card-content-white {
  border: 5px solid #f0f2f5;
}

@media screen and (max-width: 800px) {
  .container {
    width: 90%;
  }
  .content-section {
    font-size: 18px;
    padding: 0;
  }
  .card-content {
    background-color: transparent;
    width: 100%;
    border: transparent;
    padding: 0;
    margin: 0 0 2rem;
  }
}

.title-header {
  font-size: 36px;
  margin-bottom: 2rem;
}

.content-header {
  text-align: left;
  color: #808080;
  font-size: 14px;
  margin-top: 0.8rem;
  text-transform: uppercase;
  margin-top: 2rem;
}

.description-header {
  font-size: 1.8rem;
  margin-bottom: 1rem;
}

.filter-description {
  font-size: 13px;
  max-width: 95%;
  padding-top: 2%;
}

.r0-slider {
  width: 65%;
}

.r0-range {
  margin-top: 5px;
  padding-left: 10px !important;
  padding-bottom: 5px;
}

.resample {
  padding: 4px 10px;
}

@media screen and (max-width: 1600px) {
  .r0-slider { width: 50%; }
}
@media screen and (max-width: 1200px) {
  .r0-slider { width: 45%; }
}
@media screen and (max-width: 1024px) {
  .r0-slider { width: 40%; }
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

li a {
  padding: 8px;
} 

.siteTitle {
  font-size: 1.8rem;
}

.customLink {
  color: #4ddaba;
  font-weight: bold;
}
.customLink:hover {
  color: #4ddaba;
  font-weight: bold;
}

.nav-hover:hover path, .nav-hover:hover circle, .nav-hover:hover ellipse, .nav-hover:hover rect, .nav-hover:hover line {
  stroke: white;
}

.nav-active path, .nav-active circle, .nav-active ellipse, .nav-active rect, .nav-active line {
  stroke: #4ddaba;
}

.nav-hover-methods:hover path {
  fill: white;
}

.nav-active-methods path {
  fill: #4ddaba;
}

.tick {
  font-family: 'PT Sans', sans-serif;
  font-size: 12px;
}

.nav-subtitle {
  padding-left: 0px;
}

.titleNarrow {
  font-family: 'PT Sans Narrow', sans-serif;
}

.title-active {
  font-weight: bold;
  background-color: #e9ecef;
  border: 1px dashed #4ddaba;
  margin-left: 10%;
  margin-right: 10%;
}

.callout {
  /* font-family: 'Roboto Mono', monospace; */
  /* font-family: 'Space Mono', monospace; */
  font-family: 'Cousine', monospace;
  /* font-family: 'Fira Mono', monospace; */
  /* font-family: 'Anonymous Pro', monospace; */
  padding-left: 0px;
}

ul {
  list-style-type: none;
  padding: 10px 0 0 30px;
}

li {
  margin-bottom: 10px;
}

.dropdown {
  padding: 0.8rem 0;
}

.dropdown-menu {
  width: 60%;
  margin: 0px;
}

.dropdown-toggle::after {
  content: none;
}
.search-bar {
  font-size: 1.2rem;
  color: gray;
  width: 100%;
  text-align: left;
  border-color: rgba(0, 0, 0, 0.12);
  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px;
  padding-left: 0.8rem;
  padding-bottom: .3rem;
  padding-top: .3rem;
}

.hide-search {
  display: none;
}

.magnifying-glass {
  fill: currentColor;
  width: 1em;
  height: 1em;
  margin-right: 2%;
  display: inline-block;
  font-size: 1.5rem;
  -moz-user-select: none;
}

.btn-stat {
  border: 1px solid #ddd;
  margin-right: 8px;
  padding: 0.3rem 0.5rem;
}

.btn-active {
  background-color: #e9ecef;
}

.btn-active:hover {
  background-color: #e9ecef;
}

.scenario-title {
  text-align: center;
  margin-bottom: 0px;
  font-size: 1.4rem;
}

.upload-toggle {
  padding-left: 0.4rem;
  font-size: 14px;
  color: gray;
}

.filters {
  padding: 4rem 0;
  width: 25%;
}

.graph-filters {
  width: 25%;
}

@media screen and (max-width: 1000px) {
  .widescreen-only {
    display: none
  }
}

@media screen and (max-width: 800px) {
  .filters {
    padding: 0;
    width: 100%;
    margin: 0 2rem 0 3rem;
  }
  .mobile {
    pointer-events: none;
    opacity: 0.6;
  }
  .scenario-title {
    margin-left: -25%;
  }
}

.filter-label {
  font-size: 13px;
  margin-bottom: 0px;
}

.threshold-label {
  text-align: center;
  padding: 0px 40px;
}

.bold {
  font-weight: bold;
}

.underline {
  border-bottom: 2px #4ddaba dotted;
}

.underline-active {
  font-weight: bold;
  color: #4ddaba;
  border-bottom: 2px #4ddaba dotted;
}

/* .dynamic-label {
  font-weight: bold;
  padding-left: 3px;
  padding-right: 3px;
  background-color: #e9ecef;
} */

.legend-container {
  height: 9vh;
}

.legend {
  font-size: 13px;
  text-align: left;
  margin-bottom: 0px;
  margin-right: 10px;
}

.slidecontainer {
  width: 85%;
  max-width: 260px;
}

.slider-label-row {
  display: flex;
  justify-content: space-between;
}

.slider-max {
  text-align: end;
}

.slider-label {
  margin-top: -6%;
}
/* ... */

