fixing height jump on severities hover if two scenarios selected

--- a/src/index.css
+++ b/src/index.css
@@ -325,6 +325,7 @@ li {
   text-align: center;
   margin-bottom: 0px;
   font-size: 1.4rem;
+  min-height: 2.4rem;
 }
 
 .upload-toggle {
